# siton

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  USER_MANUAL.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
examples/: 01_ema_crossover.py  02_rsi_filtered_trend.py  03_trend_momentum_confluence.py  04_entry_exit_with_stops.py  05_entry_exit_with_atr_stops.py  05_multi_strategy_walkforward.py  06_risk_per_trade_sizing.py  07_purged_kfold_cv.py  complex_strategy.py  long_short_momentum.py
siton/: __init__.py  __main__.py  cli.py  composites.py  data.py  engine.py  indicators.py  sdk.py  strategies.py
