[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "siton"
version = "0.1.0"
description = "Fast crypto strategy backtester — test thousands of parameter combinations in seconds"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "polars>=1.0",
    "numpy>=2.0,<2.4",
    "ccxt>=4.0",
    "ta-lib>=0.6",
    "numba>=0.60",
]

[project.scripts]
siton = "siton.cli:main"

[tool.setuptools.packages.find]
include = ["siton*"]
