[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "siton"
version = "0.1.0"
description = "Fast crypto strategy backtester — compose strategies from 25+ indicators and test thousands of parameter combinations in seconds"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Siton Contributors" },
]
keywords = [
    "backtesting",
    "trading",
    "cryptocurrency",
    "crypto",
    "strategy",
    "technical-analysis",
    "algorithmic-trading",
    "quant",
    "quantitative-finance",
    "numba",
    "ta-lib",
    "bitcoin",
    "signals",
    "parameter-optimization",
    "walk-forward",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "polars>=1.0",
    "numpy>=2.0",
    "ccxt>=4.0",
    "ta-lib>=0.6",
    "numba>=0.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/enricopesce/siton"
Repository = "https://github.com/enricopesce/siton"
"Bug Tracker" = "https://github.com/enricopesce/siton/issues"
Changelog = "https://github.com/enricopesce/siton/blob/main/CHANGELOG.md"

[project.scripts]
siton = "siton.cli:main"

[tool.setuptools.packages.find]
include = ["siton*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
